welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: Int(-1) does not take parameters
  for (i<- 1 to getMondeHauteur())-1{
                                    ^